pemFioi/taskStyles-mobileFirst.css
body {
  padding: 0;
  margin: 0;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 16px;
}
* {
  box-sizing: border-box;
}
img {
  max-width: 100%;
  height: auto;
}
#choose-view {
  margin-top: 0 !important;
}


/* header */
#miniPlatformHeader {
  height: 40px;
  background-color: #fff;
  overflow: hidden;
}
#miniPlatformHeader img {
  max-height: 35px;
  width: auto;
}
#miniPlatformHeader h1 {
  display: inline-block;
  line-height: 40px;
  font-size: 16px;
  margin: 0;
  vertical-align: top;
}
#miniPlatformHeader .platform {
  font-size: 32px;
}

#tabsContainer {
}
#tabsMenu {
  overflow: hidden;
  border-bottom: 1px solid #33B5E5;
}
#tabsMenu .stars {
  vertical-align: middle;
}
#tabsMenu .li {
  float: left;
  width: 33.33%;
  text-align: center;
  background-color: #E0E0E0;
  cursor: pointer;
  padding: 5px;
}
#tabsMenu .li a,
#tabsMenu .li a:hover {
  text-decoration: none;
  color: #000;
  outline: 0;
}

#tabsMenu .li.current {
  background-color: #33B5E5;
}
#taskContent {
  position: absolute;
  top: 71px;
  bottom: 0;
  left: 0;
  right: 0;
}
#introGrid {

}
#taskIntro {
  padding: 5px 10px;
}

#gridButtonsAfter #testSelector {
  padding: 0;
}
#testSelector .tabs{
  display: flex;
  background-color: #ccc;
}
#testSelector .tabs .testTab {
  background-color: #efefef;
  flex: 1 0 auto;
  cursor: pointer;
}
#testSelector .tabs .testTab.currentTest {
  background-color: #fff;
}


#languageInterface {
  position: absolute;
  top: 30px;
  bottom: 0;
  left: 0;
  right: 0;
}

#editorBar {
  height: 30px;
  background-color: #666666;
}


.icon {
  background: url('../../img/icons.png') no-repeat;
  height: 36px;
  cursor: pointer;
}


/* playback */
#playerControls {
  height: 36px;
  margin-top: 2px;
}

#playerControls .icon {
  float: left;
  margin-right: 9px;

}

#playerControls .icon:last-child {
  margin: 0;
}

#playerControls .stop {
  background-position: 0 0;
  width: 42px;
}

#playerControls .play {
  background-position: -58px 0;
  width: 35px;
}

#playerControls .pause {
  background-position: -197px 0;
  width: 35px;
}

#playerControls .step {
  background-position: -105px 0;
  width: 30px;
}

#playerControls .end {
  background-position: -147px 0;
  width: 44px;
}


/* speed slider  */
.speedSlider {
  position: relative;
  height: 40px;
}

.speedSlider input {
  margin: 20px 0 0 0;
  padding: 0;
  width: 100%;
  -webkit-appearance: none;
  appearance: none;
  height: 20px;
  outline: none;
}

.speedSlider input::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  width: 18px;
  height: 18px;
  border-radius: 50%;
  border: 1px solid #000;
  cursor: pointer;
}

.speedSlider input::-moz-range-thumb {
  width: 18px;
  height: 18px;
  border-radius: 50%;
  border: 1px solid #000;
  cursor: pointer;
}

.speedSlider span {
  position: absolute;
  top: 0;
}

.speedSlider span.speedSlower {
  left: 0;
}

.speedSlider span.speedFaster {
  right: 0;
}

/*
*
* Mode specific display
*
*/
/* mode instructions */
.mode-instructions button[data-mode=instructions],
.mode-instructions #blocklyLibContent,
.mode-instructions .speedControls {
  display: none;
}
.mode-instructions #taskContent {

}
.mode-instructions #introGrid {

}
.mode-instructions #taskIntro {
  position: absolute;
  left: 410px;
  height: 100%;
  overflow: auto;
}




/* mode player */
.mode-player button[data-mode=player] {
  display: none;
}

.mode-player #introGrid {
  position: absolute;
}

.mode-player #taskIntro {
  position: absolute;
  overflow: auto;
}

.mode-player #gridContainer {
  position: absolute;
}


.mode-player .speedControls {
  position: absolute;
}


.mode-player .speedControls .speedSlider {
  width: 140px;
  margin: 0 10px;
  float: left;
}


.mode-player .speedControls .btn-group {
  float: left;
}

.mode-player #blocklyLibContent {
  position: absolute;
}



/* mode editor */
.mode-editor button[data-mode=editor],
.mode-editor #introGrid,
.mode-editor .speedControls {
  display: none;
}




#modeSelector {
  position: fixed;
  bottom: 0;
  right: 0;
  padding: 7px;
  background: #fff;
}

#modeSelector div {
  float: left;
}

#modeSelector #mode-editor {
  background-position: -323px 0;
  width: 36px;
}

#modeSelector #mode-player {
  background-position: -361px 0;
  width: 36px;
}

#modeSelector #mode-instructions {
  background-position: -284px 0;
  width: 36px;
}




#popupMessage {
   display: none;
}
#popupMessage .container {
   position: relative;
   margin: .5em 0;
   padding: 8px;
}
#popupMessage.floatingMessage {
   position: absolute;
   z-index: 100;
   top: 0;
   left: 0;
   height: 100%;
   width: 100%;
   background-color: gray;
   background: rgba(0, 0, 0, .6);
}
#popupMessage.floatingMessage .container {
   min-height: 100px;
   margin: 2%;
   border: 2px solid black;
   background: white;
}
#popupMessage img.beaver {
   position: absolute;
   width: 90px;
   left: 0px;
}
#popupMessage img.messageArrow {
   position: absolute;
   z-index: 1;
   left: 100px;
   top: 16px;
}
#popupMessage .message {
   margin-left: 115px;
   padding: 8px;
   max-width: 500px;
   border: 2px solid black;
   border-radius: 8px;
   text-align: justify;
}
#popupMessage p {
   margin: .5em 0 0;
}
#popupMessage p:first-child {
   margin-top: 0;
}
#popupMessage input {
   margin-top: 1em;
   margin-left: 200px;
}
#popupMessage button {
   margin-top: 1em;
   margin-left: 200px;
   padding: 5px 18px 5px 18px;
   margin-bottom: 0.5em;
}


@media screen and (orientation: landscape) { /* horizontal screen layout */

  .mode-player #introGrid {
    left: 0;
    width: 420px;
    top: 0;
    height: 100%;
  }

  .mode-player #taskIntro {
    left: 0;
    right: 0;
    top: 0;
    bottom: 370px;
  }

  .mode-player #gridContainer {
    left: 0;
    width: 100%;
    bottom: 60px;
    height: 290px;
  }

  .mode-player #blocklyLibContent {
    top: 0;
    bottom: 0;
    left: 420px;
    right: 0;
  }

  .mode-player .speedControls {
    left: 0;
    bottom: 0;
    width: 420px;
    height: 50px;
  }

  .mode-instructions #gridContainer {
    width: 410px;
  }

}


@media screen and (orientation: portrait) { /* vertical screen layout */

  .mode-player #introGrid {
    width: 100%;
    height: 420px;
  }


  .mode-player #taskIntro {
    left: 0;
    right: 420px;
    top: 0;
    height: 360px;
  }

  .mode-player #gridContainer {
    width: 420px;
    right: 0;
    top: 0;
    height: 100%;
  }

  .mode-player #blocklyLibContent {
    top: 420px;
    bottom: 0;
    left: 0;
    right: 0;
  }

  .mode-player .speedControls {
    left: 0;
    top: 440px;
    right: 420px;
  }


  .mode-instructions #gridContainer {
    top: 0;
    height: 360px;
  }

  .mode-instructions #grid {
    margin: 0 auto;
  }

  .mode-instructions #taskIntro {
    top: 380px;
    left: 0;
    bottom: 0;
    height: auto;
  }

  .mode-instructions #gridContainer {
    margin: 0 auto;
  }

}



@media screen and (max-width: 800px) {
  .mode-player #taskIntro {
    display: none;
  }

  .mode-player #gridContainer {
    top: 0;
  }
}



@media screen and (max-width: 600px) {

  #miniPlatformHeader h1 {
    font-size: 12px;
  }

  #miniPlatformHeader .platform {
    font-size: 16px;
  }

  .mode-player #taskIntro {
    height: 320px;
  }

  .mode-player .speedControls {
    top: 400px;
  }
}

@media screen and (max-width: 480px) {

  #miniPlatformHeader  {
    font-size: 10px;
  }

  .mode-player #introGrid {
    height: 300px;
  }

  .mode-player #gridContainer {
    position: relative;
    width: 100%;
  }

  .mode-player #blocklyLibContent {
    top: 300px;
    bottom: 55px;
  }

  .mode-player .speedControls {
    right: 80px;
    top: auto;
    bottom: 5px;
  }
}

